--- a/styles/style.css
+++ b/styles/style.css
@@ -119,6 +119,7 @@
 
 .section-title {
   width: 60%;
+  margin: 0 auto;
   text-align: center;
   line-height: 69px;
   font-size: 60px;
@@ -127,7 +128,7 @@
 
 .section-subtitle {
   width: 60%;
-  margin-top: 20px;
+  margin: 20px auto 0;
   text-align: center;
   line-height: 34px;
   font-size: 24px;
@@ -136,6 +137,7 @@
 
 .table {
   width: 1100px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-content: space-between;
@@ -174,6 +176,7 @@
 
 .feinman__title {
   width: 648px;
+  margin: 0 auto;
   text-align: center;
   line-height: 1.12em;
   font-size: 120px;
@@ -230,10 +233,13 @@
 
 .kaufman__triangle {
   width: 877px;
+  height: 877px;
   position: absolute;
   top: 0;
   right: -210px;
   z-index: -1;
+  background-image: url(../images/triangle.svg);
+  background-size: contain;
 }
 
 .footer {
@@ -277,6 +283,8 @@
   font-weight: bolder;
 }
 .footer__column-links {
+  list-style-type: none;
+  padding: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
